Regenerate all clients with latest Swaggy C.